# earl

./: .gitignore  README.md  pyproject.toml
ada/: AGENTS.md  DESIGN.md  HISTORY.md  PLAN.md  PROJECT_CONTEXT.md  README.md  REQUIREMENTS.md
ada/refactoring/2026-01-26-move-urls-to-config/: ANALYSIS.md  COMPLETE.md  DESIGN.md  PLAN.md  ROLLBACK.md
import/: e087462e-346d-471c-8ddd-843d578a4dba.csv
src/earl/: browsers.py  capture.py  cli.py  config.py  fzf.py
