[project]
name = "earl"
version = "0.1.0"
description = "URL launcher with Chrome/Safari profile support - organize and quickly open URLs by group"
readme = "README.md"
authors = [
    { name = "Patrick Burrell", email = "patrickburrell@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
earl = "earl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
